# navelo

./: NOTE.md  NOTE_EPAPER.md  README.md
.github/workflows/: esp32_ci.yml
android/: .gitignore  build.gradle.kts  secrets.gradle.kts  secrets.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/net/o137/navelo/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/net/o137/navelo/: BookmarkStore.kt  LicenseScreen.kt  MainActivit.kt  MainActivity.kt  MainApplication.kt  MainScreen.kt  MapActivity.kt  NaveloDevice.kt  NaveloService.kt  NavigationScreen.kt  SettingsScreen.kt
android/app/src/main/java/net/o137/navelo/stores/: BookmarkStore.kt
android/app/src/main/java/net/o137/navelo/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/net/o137/navelo/utils/: Compass.kt  Licenses.kt  LocationPermission.kt  Map.kt  Misc.kt  Permission.kt
android/app/src/main/res/drawable/: ic_red_marker.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/net/o137/navelo/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
badapple/: Cargo.toml
esp32/: Cargo.toml  sdkconfig.defaults
esp32/.cargo/: config.toml
esp32/.github/workflows/: esp32_ci.yml
esp32/src/: badapple.bits  main.rs
