[package]
name = "navelo"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.84"

[[bin]]
name = "navelo"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = "1.0.96"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
enumset = "1.1.5"
esp-idf-hal = { version = "0.45.2", features = ["rmt-legacy"] }
esp-idf-svc = { git = "https://github.com/omasakun/navelo-esp-idf-svc.git", branch = "navelo", features = ["critical-section", "embassy-time-driver", "embassy-sync", "experimental"] }
log = "0.4"
thiserror = "2.0.11"

[build-dependencies]
embuild = "0.33"
